# gsexp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
benchmarks/: bench_data.hpp  internal_probe.hpp  internal_query_bench.hpp  mixed_query_bench.hpp  parse_bench.cpp  query_bench.hpp  query_transition_bench.hpp  scan_probe.hpp  traversal_bench.hpp  yyjson_bench.hpp
docs/: performance-history.md  performance.md  spec.md
examples/: gsexp_demo.cpp
include/gsexp/: sexp.hpp
scripts/: bench.sh  build.sh  run.sh
src/: form_view.cpp  node.cpp  sexp.cpp  tokenize.cpp
tests/: sexp_tests.cpp
